# colcon-cargo-ros

./: README.md  setup.cfg  stdeb.cfg
colcon_cargo_ros/package_identification/: identify.py
colcon_cargo_ros/task/: build.py
scripts/: build-rust-package.sh
